# ytqa

./: .dockerignore  .env.sample  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml  get_youtube_cookies.py  pyproject.toml
docker/: backend.dev.dockerfile  backend.dockerfile  backend.prod.dockerfile  frontend.dev.dockerfile  frontend.dockerfile  frontend.prod.dockerfile  nginx.conf
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: CopyButton.tsx
frontend/src/pages/: Home.tsx
ytqa/: __init__.py  cli.py  config.py  orchestrator.py
ytqa/adapters/embeddings/: __init__.py  openai.py
ytqa/adapters/topic_extractors/: __init__.py  openai_topics.py
ytqa/adapters/transcripts/: __init__.py  base.py  factory.py  piped.py  whisper.py  youtube.py
ytqa/adapters/vectorstores/: faiss_store.py
ytqa/core/: __init__.py  models.py  orchestrator.py  qa.py  topic_segmentation.py
ytqa/tests/: test_piped.py  test_transcripts.py
ytqa/vectorstores/: faiss_store.py
ytqa/webapi/: app.py
